--- a/app/src/main/res/layout/currency_item_layout.xml
+++ b/app/src/main/res/layout/currency_item_layout.xml
@@ -7,11 +7,22 @@
 	android:layout_height="wrap_content"
 	android:padding="12dp">
 
+	<TextView
+		android:id="@+id/position"
+		android:layout_width="28dp"
+		android:layout_height="match_parent"
+		android:gravity="center|start"
+		tool:text="1"
+		android:textColor="@android:color/holo_blue_dark"
+		android:textSize="24sp"/>
+
 	<LinearLayout
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
 		android:orientation="vertical"
+		android:paddingStart="12dp"
+		android:paddingLeft="12dp"
 		android:paddingEnd="12dp"
 		android:paddingRight="12dp">
 
