--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  tools:context=".view.CurrenciesActivity">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	tools:context=".view.CurrenciesActivity">
 
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/rates"
-      android:textColor="@android:color/black"
-      android:textSize="22sp"
-      android:layout_marginStart="52dp"
-      android:layout_marginLeft="52dp"
-      android:layout_marginTop="12dp"
-      android:layout_marginBottom="24dp"/>
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/rates"
+		android:textColor="@android:color/black"
+		android:textSize="22sp"
+		android:layout_marginStart="52dp"
+		android:layout_marginLeft="52dp"
+		android:layout_marginTop="12dp"
+		android:layout_marginBottom="24dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/rates_list"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:scrollbars="vertical"/>
+	<LinearLayout
+		android:id="@+id/loading"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center">
+
+	<ProgressBar
+		android:layout_width="60dp"
+		android:layout_height="60dp"/>
+
+	</LinearLayout>
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/rates_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:scrollbars="vertical"/>
 
 </LinearLayout>
